# jobQueueAPI

./: .env.example  README.md  pyproject.toml  test_db.py
alembic/: env.py
alembic/versions/: 5ebc41064c86_create_jobs_table.py  f81c9e833f8e_add_retry_fields.py
app/: config.py  database.py  main.py  redis_client.py
app/jobs/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/worker/: main.py
apps/: main.py
docker/: Dockerfile  docker-compose.yml
